# Crawler-Trie

./: Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
tests/: test_crawler.py  test_trie.py  test_web.py
trie_search/: README.md  crawler.py  trie.py  utils.py  web.py
trie_search/static/: style.css
trie_search/templates/: index.html
