[project]
name = "triespider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
